--- a/Mobiquity/test-output/index.html
+++ b/Mobiquity/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1707302539\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-53001641\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -162,7 +162,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1707302539\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-53001641\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -215,20 +215,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'DeleteEmployee')
 data.setCell(0, 2, 'TestScenarios.CafeTownSendTestCases')
-data.setCell(0, 3, 45800);
+data.setCell(0, 3, 52303);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'UpdateEmployeeDetail')
 data.setCell(1, 2, 'TestScenarios.CafeTownSendTestCases')
-data.setCell(1, 3, 27186);
+data.setCell(1, 3, 44024);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'CreateNewEmployee')
 data.setCell(2, 2, 'TestScenarios.CafeTownSendTestCases')
-data.setCell(2, 3, 16964);
+data.setCell(2, 3, 28704);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -261,39 +261,39 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">OpenApplication</span>
-                <span class="method-start">926 ms</span>
+                <span class="method-start">869 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CreateNewEmployee(Lee, Test, 2018-12-05, Server.Test@Test.com)</span>
-                <span class="method-start">11365 ms</span>
+                <span class="method-start">12944 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28333 ms</span>
+                <span class="method-start">41676 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">OpenApplication</span>
-                <span class="method-start">29477 ms</span>
+                <span class="method-start">42837 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">UpdateEmployeeDetail(Lee, Test, 2018-12-05, Server.Test@Test.com)</span>
-                <span class="method-start">42003 ms</span>
+                <span class="method-start">53387 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">69191 ms</span>
+                <span class="method-start">97413 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">OpenApplication</span>
-                <span class="method-start">70020 ms</span>
+                <span class="method-start">98362 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">DeleteEmployee(Lee, Test, 2018-12-05, Server.Test@Test.com)</span>
-                <span class="method-start">77696 ms</span>
+                <span class="method-start">112026 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">123497 ms</span>
+                <span class="method-start">164331 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
